--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html>
 
 <head>
-    <title>Hello!</title>
-    <script src="/socket.io/socket.io.js"></script>
+    <title>ThugBugs!</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
-<script>
-    const socket = io();
-</script>
 
 <body>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.0.0/dist/phaser.min.js"></script>
     <script src="/game.js" type="module"></script>
 </body>
